--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,13 @@
-cmake_minimum_required(VERSION 2.8)
+cmake_minimum_required(VERSION 3.1...3.18)
 
 # TODO
 # Edit following project-name
-project(cpp_template CXX)
+project(
+    cpp_template
+    VERSION 1.0
+    DESCRIPTION "Sample cpp project"
+    LANGUAGES CXX
+    )
 
 # TODO
 # Modify following sentence according to your project requirement
