Modify some CMakeLists.txt
Use CMAKE_CXX_STANDARD, CMAKE_CXX_STANDARD_REQUIRED,
CMAKE_CXX_EXTENSIONS
Remove CMAKE_CXX_FLAGS, CMAKE_CXX_FLAGS_DEBUG, CMAKE_CXX_FLAGS_RELEASE
Reference : https://gist.github.com/mbinna/c61dbb39bca0e4fb7d1f73b0d66a4fd1#get-your-hands-off-cmake_cxx_flags

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,12 +11,17 @@ project(
 
 # TODO
 # Modify following sentence according to your project requirement
-set(CMAKE_CXX_FLAGS "-std=c++11 -Wall -Wextra")
-set(CMAKE_CXX_FLAGS_DEBUG "-g3 -O0 -pg")
-set(CMAKE_CXX_FLAGS_RELEASE "-O2 -O0 -march=native")
-
-# The Executable code
-add_subdirectory(app)
+set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
 
 # Library code
 add_subdirectory(src)
+
+# Only do following if this is the main project
+if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
+
+    # The Executable code
+    add_subdirectory(app)
+
+endif()
