--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,14 @@
+# Optionally glob, ut only for CMake 3.12 or later:
+set(
+    HEADER_LIST
+    "${CMAKE_SOURCE_DIR}/include/mylib/mylib.hpp"
+    )
+
 add_library(
     mylib
     STATIC
     mylib.cpp
+    ${HEADER_LIST}
     )
 
 target_include_directories(
