--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,9 @@
 language: cpp
+
+compiler:
+    - clang++
+
+install:
+    # Download cmake binary
+    - wget https://cmake.org/files/v3.18/cmake-3.18.1-Linux-x86_64.tar.gz
+    - tar -xf cmake-3.18.1-Linux-x86_64.tar.gz
