--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ addons:
     apt:
         packages:
             - cmake
+            - clang-format
 
 script:
     - mkdir build
@@ -14,3 +15,4 @@ script:
     - cmake ..
     - make
     - make test
+    - cd $TRAVIS_BUILD_DIR && ./tools/clang-format.sh
